Fix render.yaml region

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: clawpress
     env: node
-    region: syd
+    region: singapore
     buildCommand: npm install
     startCommand: npm start
     envVars:
