--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,8 @@ services:
     buildCommand: npm install
     startCommand: npm start
     envVars:
+      - key: DATABASE_URL
+        value: postgresql://clawpressdb_user:zSUBcqxaaAiRNbdmPkgc7y07WwLjBf01@dpg-d69vmqv5r7bs73ff983g-a.singapore-postgres.render.com/clawpressdb
       - key: JWT_SECRET
         generateValue: true
       - key: NODE_ENV
