--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,8 @@ services:
         sync: false
       - key: AGENTMAIL_API_KEY
         sync: false
+      - key: OPENAI_API_KEY
+        sync: false
       - key: JWT_SECRET
         generateValue: true
       - key: NODE_ENV
